# whatsapp-voice-ai-assistant

./: .dockerignore  .gitignore  Dockerfile.bot  Dockerfile.transcribe  README.md  compose.yaml  go.mod  go.sum  main.go  main.py  main_test.go  pyproject.toml  requirements.txt  sample.env  test_main.py  test_transcribe.py  transcribe.py
.devcontainer/: devcontainer.json  setup.sh
goRoute/application/: app.go  routes.go
goRoute/handler/: whatsapp.go
groq/: groq.go  groq_test.go
