[project]
name = "whatsapp-vn-groq"
version = "0.1.0"
description = "WhatsApp AI Chat Assistant with Voice Transcription"
readme = "README.md"
authors = [
    {name = "CSK", email = "73425927+cr2007@users.noreply.github.com"},
    {name = "Mufliha D", email = "s.mufliha12@gmail.com"},
]
requires-python = "<3.14,>=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "faster-whisper<2.0.0,>=1.2.1",
]
[dependency-groups]
dev = [
    "python-dotenv<2.0.0,>=1.0.1",
]

[tool.fastapi]
entrypoint = "main:app"
